--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://github.com/shahul-hamed/my_portfolio">
+  <base href="https://github.com/shahul-hamed/ShahulHameed.github.io">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A skilled software developer portfolio.">
+  <meta name="description" content="A skilled Flutter developer portfolio.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -81,7 +81,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=4054263868');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3671616895');
       });
     }
   </script>
