--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://github.com/shahul-hamed/ShahulHameed.github.io">
+<!--  <base href="https://github.com/shahul-hamed.github.io/portfolio">-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -81,7 +81,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=178904322');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3145296914');
       });
     }
   </script>
